@@ -1,7 +1,7 @@
 /*
   CLIgen hello world application
 
-  Copyright (C) 2001-2014 Olof Hagsand
+  Copyright (C) 2001-2016 Olof Hagsand
 
   This file is part of CLIgen.
 
