@@ -1,7 +1,7 @@
 /*
   CLI generator match functions, used in runtime checks.
 
-  Copyright (C) 2001-2014 Olof Hagsand
+  Copyright (C) 2001-2016 Olof Hagsand
 
   This file is part of CLIgen.
 
