@@ -1,5 +1,5 @@
 #
-#  Copyright (C) 2001-2014 Olof Hagsand
+#  Copyright (C) 2001-2016 Olof Hagsand
 #
 #  This file is part of CLIgen.
 #
@@ -16,10 +16,12 @@
 #  You should have received a copy of the GNU General Public License
 #  along with CLIgen; see the file COPYING.
 
+- type_max2str - get max value of a type
+	
 - Added doxygen reference and function call documentation. Just do 'make doc' 
   and direct your browser to doc/index.html
 
-	- Fixed parse bugs for some choices syntax, eg <a choice:1.0|length> did not work.
+- Fixed parse bugs for some choices syntax, eg <a choice:1.0|length> did not work.
 
 - Merge sub-trees with original trees containing same symbols. Eg a cligen-spec:
 	"a @TREE; a b;"
